--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
     width: 1226px;
     margin-right: auto;
     margin-left: auto;
@@ -8,4 +9,11 @@
       width: 100%;
       height: 100%;
     }
+  }
+
+  input{
+    outline: none;
+    box-sizing: border-box;
+    font-size: 14px;
+    
   }
