--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -17,3 +17,17 @@
     font-size: 14px;
     
   }
+  .fl{
+    float: left;
+  }
+  .fr{
+    float: right;
+  }
+  .clearfix ::before,.clearfix::after{
+    content: '';
+    display: table;
+
+  }
+  .clearfix::after{
+    clear: both;
+  }
