--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,33 +1,72 @@
+@import "@/assets/scss/mixin.scss";
+
 .container {
   position: relative;
-    width: 1226px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 1226px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+a {
+  img {
+    width: 100%;
+    height: 100%;
   }
-  a{
-    img{
-      width: 100%;
-      height: 100%;
+}
+
+input {
+  outline: none;
+  box-sizing: border-box;
+  font-size: 14px;
+
+}
+
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
+
+.clearfix ::before,
+.clearfix::after {
+  content: '';
+  display: table;
+
+}
+
+.clearfix::after {
+  clear: both;
+}
+
+.header-log {
+  display: inline-block;
+  width: 55px;
+  height: 55px;
+  background-color: #ff6600;
+
+  a {
+    display: inline-block;
+    width: 110px;
+    height: 55px;
+
+    &::before {
+      content: " ";
+      display: inline-block;
+      @include baImg(55px, 55px, "/imgs/mi-logo.png", "55px");
+      transition: margin 0.2s;
+    }
+
+    &::after {
+      content: " ";
+      display: inline-block;
+      @include baImg(55px, 55px, "/imgs/mi-home.png", "55px");
+    }
+
+    &:hover::before {
+      margin-left: -55px;
+      transition: margin 0.2s;
     }
   }
-
-  input{
-    outline: none;
-    box-sizing: border-box;
-    font-size: 14px;
-    
-  }
-  .fl{
-    float: left;
-  }
-  .fr{
-    float: right;
-  }
-  .clearfix ::before,.clearfix::after{
-    content: '';
-    display: table;
-
-  }
-  .clearfix::after{
-    clear: both;
-  }
+}
